changes to controllers, removed errors

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5433/newpos
+spring.datasource.url=jdbc:postgresql://localhost:5433/newpostest
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.datasource.initialization-mode=always
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
